--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node_modules"
   ],
   "dependencies": {
+    "@angular/animations": "8.2.4",
     "@angular/common": "8.2.4",
     "@angular/compiler": "8.2.4",
     "@angular/core": "8.2.4",
@@ -22,6 +23,7 @@
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
     "bootstrap": "4.3.1",
+    "ng-zorro-antd": "^8.5.2",
     "core-js": "3.2.1",
     "moment": "2.24.0",
     "ng-jhipster": "0.11.4",
@@ -37,6 +39,7 @@
     "@angular/cli": "8.3.1",
     "@angular/compiler-cli": "8.2.4",
     "@ngtools/webpack": "8.3.1",
+    "@openapitools/openapi-generator-cli": "0.0.14-4.0.2",
     "@types/jest": "24.0.18",
     "@types/node": "10.12.27",
     "@typescript-eslint/eslint-plugin": "2.7.0",
@@ -59,6 +62,7 @@
     "fork-ts-checker-webpack-plugin": "1.5.0",
     "friendly-errors-webpack-plugin": "1.7.0",
     "generator-jhipster": "6.5.1",
+    "generator-jhipster-login-page": "1.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "3.0.4",
@@ -85,7 +89,6 @@
     "ts-loader": "6.0.4",
     "tslint": "5.19.0",
     "typescript": "3.4.5",
-    "@openapitools/openapi-generator-cli": "0.0.14-4.0.2",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.7",
     "webpack-dev-server": "3.8.0",
