--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "@fortawesome/angular-fontawesome": "0.5.0",
     "@fortawesome/fontawesome-svg-core": "1.2.22",
     "@fortawesome/free-solid-svg-icons": "5.10.2",
-    "@ng-bootstrap/ng-bootstrap": "5.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.2.2",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
-    "bootstrap": "4.3.1",
-    "ng-zorro-antd": "^8.5.2",
     "core-js": "3.2.1",
     "moment": "2.24.0",
     "ng-jhipster": "0.11.4",
+    "ng-zorro-antd": "^8.5.2",
     "ngx-cookie": "4.0.2",
     "ngx-infinite-scroll": "8.0.0",
     "ngx-webstorage": "4.0.1",
